[gd_scene load_steps=10 format=2]

[ext_resource path="res://Player/Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Player/chibby/chibby animations.tscn" type="PackedScene" id=2]

[sub_resource type="CapsuleMesh" id=1]

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.176471, 0.552941, 0.054902, 1 )

[sub_resource type="CapsuleShape" id=3]

[sub_resource type="CylinderMesh" id=4]

[sub_resource type="CylinderShape" id=5]

[sub_resource type="PrismMesh" id=6]
size = Vector3( 2, 2, 0.5 )

[sub_resource type="SpatialMaterial" id=7]
albedo_color = Color( 0.0901961, 0.776471, 0.133333, 1 )

[node name="Player" type="KinematicBody"]
script = ExtResource( 1 )
cameraMode = 1

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
visible = false
use_in_baked_light = true
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
shape = SubResource( 3 )

[node name="MeshInstance2" type="MeshInstance" parent="."]
visible = false
use_in_baked_light = true
mesh = SubResource( 4 )
material/0 = null

[node name="CollisionShape2" type="CollisionShape" parent="."]
visible = false
shape = SubResource( 5 )
disabled = true

[node name="camera_base" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )

[node name="camera_rot" type="Spatial" parent="camera_base"]

[node name="RayCast" type="RayCast" parent="camera_base/camera_rot"]
enabled = true
cast_to = Vector3( 0, 0, -1 )

[node name="camera_ray_cast" type="Spatial" parent="camera_base/camera_rot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1 )

[node name="Camera" type="Camera" parent="camera_base/camera_rot/camera_ray_cast"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1 )
visible = false

[node name="mesh_root" type="Spatial" parent="."]

[node name="CSGMesh" type="CSGMesh" parent="mesh_root"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, 0, 0, -2.2 )
visible = false
use_in_baked_light = true
mesh = SubResource( 6 )

[node name="chibby animations" parent="mesh_root" instance=ExtResource( 2 )]
transform = Transform( -2, 0, 6.51683e-07, 0, 2, 0, -6.51683e-07, 0, -2, 0, -1.483, 0 )

[node name="model_mesh_root" type="Spatial" parent="."]
visible = false

[node name="CSGMesh" type="CSGMesh" parent="model_mesh_root"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, 0, -1, -2.2 )
use_in_baked_light = true
mesh = SubResource( 6 )
material = SubResource( 7 )
